# tmxu

./: Cargo.toml  LICENSE  README.md  mise.toml
.github/workflows/: ci.yml  release.yml
.mise/tasks/: release_major  release_minor
src/: app.rs  main.rs  tmux.rs  ui.rs
