[package]
name = "tmxu"
version = "1.0.0"
edition = "2021"
description = "A tmux session browser TUI"
license = "MIT"
repository = "https://github.com/adammeghji/tmxu"
homepage = "https://github.com/adammeghji/tmxu"
keywords = ["tmux", "tui", "terminal", "session", "multiplexer"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
tui-tree-widget = "0.24"
crossterm = "0.29"
color-eyre = "0.6"
tui-banner = "0.2"
ansi-to-tui = "8"

[profile.release]
lto = true
strip = true
